# memory_allocator

./: .travis.yml  CMakeLists.txt
sources/: allocator.cpp  custom_container.hpp  factorial.hpp  reserving_allocator.hpp
tests/: allocator_gtest.cpp
